tests/rosetta/out/Java/arithmetic-rational.error
javac: exit status 1
/tmp/ArithmeticRational.java:17: error: incompatible types: possible lossy conversion from double to int
                return mid;
                       ^
1 error
